--- a/src/components/slideProdect/slideProduct.css
+++ b/src/components/slideProdect/slideProduct.css
@@ -1,218 +1,281 @@
-:root{
-    --main_color: #0090f0;
-    --p_color: #7b7b7b;
-    --bg_color: #F3F3F3;
-    --white_color: #fff;
-    --color_heading: #253237;
-    --border_color: #d6d6d6d5;
-  }
-  .slide_product{
-    padding:0 25px 25px 0;
-  }
+:root {
+  --main_color: #0090f0;
+  --p_color: #7b7b7b;
+  --bg_color: #F3F3F3;
+  --white_color: #fff;
+  --color_heading: #253237;
+  --border_color: #d6d6d6d5;
+}
 
-  .top_slide{
-    position: relative;
-    margin-bottom: 20px;
-    border-bottom: 1px solid var(--border_color);
-    padding: 15px 20px 20px 0;
-  }
+/* ====== SLIDER SECTION ====== */
+.slide_product {
+  padding: 0 25px 25px 0;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+  justify-content: center;
+}
 
-  .top_slide::after{
-    content: '';
-    position: absolute;
-    bottom: -1px;
-    width: 100px;
-    height: 2px;
-    background: var(--main_color);
-  }
-  .top_slide h2{
-    font-size: 30px;
-    color: var(--main_color);
-    margin-bottom: 10px;
-    text-transform: capitalize;
-  }
+.top_slide {
+  position: relative;
+  margin-bottom: 20px;
+  border-bottom: 1px solid var(--border_color);
+  padding: 15px 20px 20px 0;
+}
 
+.top_slide::after {
+  content: '';
+  position: absolute;
+  bottom: -1px;
+  width: 100px;
+  height: 2px;
+  background: var(--main_color);
+}
 
+.top_slide h2 {
+  font-size: 30px;
+  color: var(--main_color);
+  margin-bottom: 10px;
+  text-transform: capitalize;
+}
 
-  /* product */ 
+/* ====== PRODUCT CARD ====== */
+.product {
+  flex: 1 1 calc(20% - 15px); /* 5 كروت في الصف */
+  background: var(--white_color);
+  padding: 25px 15px;
+  border: 1px solid var(--border_color);
+  transition: 0.3s;
+  border-radius: 5px;
+  position: relative;
+  overflow: hidden;
+  box-sizing: border-box;
+}
 
+.product:hover {
+  border-color: var(--main_color);
+  box-shadow: 10px 10px 15px #94949429;
+}
 
-  .product{
-    width: 250px;
-    background: var(--white_color);
-    padding: 25px 15px;
-    border: 1px solid var(--border_color);
-    transition: 0.3s;
-    border-radius: 5px;
-    position: relative;
-    overflow: hidden;
-  }
-  .product:hover{
-    border-color: var(--main_color);
-    box-shadow: 10px 10px 15px #94949429;
-  }
+.product .img_product {
+  position: relative;
+  height: 180px;
+  padding: 0 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
+}
 
-  .product .img_product{
-    position: relative;
-    height: 180px;
-    padding: 0 20px;
+.product .img_product img {
+  height: 160px;
+  width: auto;
+}
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 30px;
-  }
+.product .name_product {
+  margin-bottom: 10px;
+  color: var(--color_heading);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+}
 
-  .product .img_product img{
-    height: 160px;
-    width: auto;
-  }
+.product .stars {
+  margin: 15px 0;
+  display: flex;
+  gap: 5px;
+}
 
-  .product .name_product{
-    margin-bottom: 10px;
-    color: var(--color_heading);
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-     -webkit-line-clamp: 1; /*// number of lines to show */
-    -webkit-box-orient: vertical;
-  }
+.product .stars svg {
+  fill: #f8d941;
+  font-size: 18px;
+}
 
-  .product .stars{
-    margin: 15px 0;
-    display: flex;
-    gap: 5px;
-  }
+.product .price {
+  font-weight: bold;
+  font-size: 20px;
+}
 
-  .product .stars svg{
-    fill: #f8d941;
-    font-size: 18px;
-  }
+.product .icons {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  display: flex;
+  flex-direction: column;
+  right: -50px;
+  gap: 10px;
+  transition: 0.3s;
+}
 
-  .product .price{
-    font-weight: bold;
-    font-size: 20px;
-  }
+.product:hover .icons {
+  right: 20px;
+}
 
-  .product .icons{
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    display: flex;
-    flex-direction: column;
-    right: -50px;
-    gap: 10px;
-    transition: 0.3s;
-  }
-  .product:hover .icons{
-    right: 20px;
-  }
-  .product .icons span{
-    width: 40px;
-    height: 40px;
-    background: var(--bg_color);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 100%;
-    cursor: pointer;
-  }
+.product .icons span {
+  width: 40px;
+  height: 40px;
+  background: var(--bg_color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 100%;
+  cursor: pointer;
+}
 
-  .product .icons span.in-fav{
-     background: var(--main_color);
-  }
-   .product .icons span.in-fav svg{
-      fill: var(--white_color);
-  }
+.product .icons span.in-fav {
+  background: var(--main_color);
+}
 
-  .product.in-cart .icons .btn_addtocart{
-    background: var(--main_color);
-    pointer-events: none;
-  }
-  .product.in-cart .icons .btn_addtocart svg{
-    fill: var(--white_color);
-  }
-  .product .status_cart{
-    position: absolute;
-    top: -30px;
-    left: 50%;
-    transform: translateX(-50%);
-    font-size: 13px;
-    transition: 0.3s;
-    display: flex;
-    align-items: center;
-    gap: 5px;
-    color: #253237;
-  }
+.product .icons span.in-fav svg {
+  fill: var(--white_color);
+}
 
-  .product.in-cart .status_cart{
-    top: 10px;
-  }
+.product.in-cart .icons .btn_addtocart {
+  background: var(--main_color);
+  pointer-events: none;
+}
 
-  .product .status_cart svg{
-    color: rgb(44, 252, 3);
-  }
+.product.in-cart .icons .btn_addtocart svg {
+  fill: var(--white_color);
+}
 
+.product .status_cart {
+  position: absolute;
+  top: -30px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 13px;
+  transition: 0.3s;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  color: #253237;
+}
 
+.product.in-cart .status_cart {
+  top: 10px;
+}
 
-  .loading_SlideProduct .top_slide{
-    height: 105px;
+.product .status_cart svg {
+  color: rgb(44, 252, 3);
+}
 
-  }
-
-  .loading_SlideProduct .top_slide h2{
-    height: 35px;
-    width: 250px;
-  }
-
-  .loading_SlideProduct .top_slide p{
-    height: 25px;
-    width: 350px;
-  }
-
-  .prodcuts_loading{
-    display: flex;
-    gap: 30px;
-  }
-
-  /* .prodcuts_loading .img_product{
-
-  } */
-
-  .prodcuts_loading  .content{
-    height: 30px;
-    margin-bottom: 10px;
-  }
-
-  .loading_SlideProduct .top_slide{
-    
-    height: 105px;
-    width: 100% ;
-  }
-  .loading_SlideProduct .top_slide h2{
-    height: 35px;
-    
-  }
-  .loading_SlideProduct .top_slide  p{
-    height: 25px;
-    
-  }
-
-  .products_loading{
-    display: flex;
-    gap: 30px;
-  }
-  .products_loading .content{
-    height: 30px;
-    margin-bottom: 10px;
-   
-  }
-
-  
-.in-cart{
+.in-cart {
   border-color: var(--main_color) !important;
   pointer-events: none !important;
 }
 
+/* ====== LOADING STATES ====== */
+.loading_SlideProduct .top_slide {
+  height: 105px;
+  width: 100%;
+}
 
+.loading_SlideProduct .top_slide h2 {
+  height: 35px;
+  width: 250px;
+}
 
+.loading_SlideProduct .top_slide p {
+  height: 25px;
+  width: 350px;
+}
+
+.prodcuts_loading,
+.products_loading {
+  display: flex;
+  gap: 30px;
+}
+
+.products_loading .content {
+  height: 30px;
+  margin-bottom: 10px;
+}
+
+/* ====== RESPONSIVE ====== */
+
+/* 4 كروت في الصف */
+@media (max-width: 1200px) {
+  .product {
+    flex: 1 1 calc(25% - 15px);
+  }
+
+  .top_slide h2 {
+    font-size: 26px;
+  }
+}
+
+/* التابلت - 3 كروت */
+@media (max-width: 992px) {
+  .slide_product {
+    padding: 0 10px 25px 0;
+  }
+
+  .product {
+    flex: 1 1 calc(33.333% - 10px);
+    padding: 20px 10px;
+  }
+
+  .product .img_product {
+    height: 150px;
+  }
+
+  .product .img_product img {
+    height: 130px;
+  }
+
+  .top_slide h2 {
+    font-size: 24px;
+  }
+}
+
+/* الموبايل - 2 كارت */
+@media (max-width: 768px) {
+  .slide_product {
+    padding: 0 5px 20px 5px;
+    gap: 10px;
+  }
+
+  .product {
+    flex: 1 1 calc(50% - 10px);
+    padding: 15px 10px;
+  }
+
+  .product .img_product {
+    height: 120px;
+  }
+
+  .product .img_product img {
+    height: 110px;
+  }
+
+  .product .price {
+    font-size: 16px;
+  }
+
+  .product .stars svg {
+    font-size: 15px;
+  }
+
+  .top_slide h2 {
+    font-size: 20px;
+  }
+}
+
+/* الموبايل الصغير - كارت واحد */
+@media (max-width: 480px) {
+  .product {
+    flex: 1 1 100%;
+    padding: 10px;
+  }
+
+  .product .img_product img {
+    height: 100px;
+  }
+
+  .top_slide h2 {
+    font-size: 18px;
+  }
+}
